feat(EventLocation): add eventlocation methods